outline with border shadow - prevent error on safari outline square

--- a/sass/same-height-box.scss
+++ b/sass/same-height-box.scss
@@ -22,6 +22,7 @@
             height: 50px;
             border-radius: 50%;
             background: #0066cc;
+            box-shadow: 0 0 0 4px white, 0 0 0 5px red;
             i {
                 color: #ffffff;
             }
